Add User in Querys
