# src/main/java/br/com/alura/aluraflix/controllers/VideoController.java
@@ -7,6 +7,7 @@ import br.com.alura.aluraflix.models.Category;
 import br.com.alura.aluraflix.models.Video;
 import br.com.alura.aluraflix.repository.CategoryRepository;
 import br.com.alura.aluraflix.repository.VideoRepository;
+import br.com.alura.aluraflix.security.jwt.JwtUtils;
 import br.com.alura.aluraflix.services.NextSequenceService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
@@ -18,15 +19,16 @@ import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
 import javax.validation.Valid;
-import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @CrossOrigin(origins = "*", maxAge = 3600)
 @RestController
 @RequestMapping("/api/videos")
 @PreAuthorize("hasRole('USER') or hasRole('MODERATOR')")
 public class VideoController {
+
+    @Autowired
+    JwtUtils jwtUtils;
 
     @Autowired
     VideoRepository videoRepository;
@@ -38,11 +40,14 @@ public class VideoController {
     NextSequenceService nextSequenceService;
 
     @GetMapping(produces = MediaType.APPLICATION_JSON_VALUE)
-    public ResponseEntity<?> getVideos(@RequestParam(required = false) String search, @RequestParam int page) {
+    public ResponseEntity<?> getVideos(@RequestHeader("Authorization") String headerAuth,
+            @RequestParam(required = false) String search,
+            @RequestParam int page) {
+
+        String username = jwtUtils.getUserNameFromJwtToken(headerAuth.substring(7));
 
         Pageable pageable = PageRequest.of(page, Video.PAGE_LIMIT);
-
-        Page<Video> videoPage = videoRepository.findVideos(pageable, search);
+        Page<Video> videoPage = videoRepository.findVideos(pageable, search, username);
 
         if (videoPage.isEmpty()) {
             return ResponseEntity.badRequest().body(new MessageResponse("Videos not found"));
@@ -54,8 +59,10 @@ public class VideoController {
             value = "/{id}",
             produces = MediaType.APPLICATION_JSON_VALUE
     )
-    public ResponseEntity<?> getVideoById(@PathVariable Integer id) {
-        Optional<Video> optionalVideo = videoRepository.findVideoById(id);
+    public ResponseEntity<?> getVideoById(@RequestHeader("Authorization") String headerAuth, @PathVariable Integer id) {
+
+        String username = jwtUtils.getUserNameFromJwtToken(headerAuth.substring(7));
+        Optional<Video> optionalVideo = videoRepository.findVideoById(id, username);
 
         if (optionalVideo.isPresent()) {
             return ResponseEntity.ok(VideoResponse.from(optionalVideo.get()));
@@ -67,16 +74,19 @@ public class VideoController {
             consumes = MediaType.APPLICATION_JSON_VALUE,
             produces = MediaType.APPLICATION_JSON_VALUE
     )
-    public ResponseEntity<?> insertVideo(@Valid @RequestBody final VideoRequest videoRequest) {
+    public ResponseEntity<?> insertVideo(@RequestHeader("Authorization") String headerAuth,
+                                         @Valid @RequestBody final VideoRequest videoRequest) {
+        String username = jwtUtils.getUserNameFromJwtToken(headerAuth.substring(7));
 
         if (videoRequest.getCategoryId() == null) {
             videoRequest.setCategoryId(Category.FREE_CATEGORY);
-        } else if (!categoryRepository.existsById(videoRequest.getCategoryId())) {
+        } else if (!categoryRepository.existsById(videoRequest.getCategoryId(), username)) {
             return ResponseEntity.badRequest().body(new MessageResponse("Category not found"));
         }
 
         Video video = Video.from(videoRequest);
         video.setId(nextSequenceService.getNextSequence(Video.SEQUENCE_NAME));
+        video.setUser(username);
 
         if (videoRepository.insertOrUpdateVideo(video)) {
             return ResponseEntity.ok(VideoResponse.from(video));
@@ -84,31 +94,25 @@ public class VideoController {
         return ResponseEntity.badRequest().body(new MessageResponse("Video not inserted"));
     }
 
-    @PostMapping(
-            value = "/many",
-            consumes = MediaType.APPLICATION_JSON_VALUE,
-            produces = MediaType.APPLICATION_JSON_VALUE
-    )
-    public List<ResponseEntity<?>> insertManyVideos(@Valid @RequestBody final List<VideoRequest> videoRequests) {
-        return videoRequests.stream().map(this::insertVideo).collect(Collectors.toList());
-    }
-
     @PutMapping(
             value = "/{id}",
             consumes = MediaType.APPLICATION_JSON_VALUE,
             produces = MediaType.APPLICATION_JSON_VALUE
     )
-    public ResponseEntity<?> updateVideo(@PathVariable Integer id, @Valid @RequestBody final VideoRequest videoRequest) {
-        if (videoRepository.existsById(id)) {
+    public ResponseEntity<?> updateVideo(@RequestHeader("Authorization") String headerAuth,
+                                         @PathVariable Integer id, @Valid @RequestBody final VideoRequest videoRequest) {
+        String username = jwtUtils.getUserNameFromJwtToken(headerAuth.substring(7));
+        if (videoRepository.existsById(id, username)) {
 
             if (videoRequest.getCategoryId() == null) {
                 videoRequest.setCategoryId(Category.FREE_CATEGORY);
-            } else if (!categoryRepository.existsById(videoRequest.getCategoryId())) {
+            } else if (!categoryRepository.existsById(videoRequest.getCategoryId(), username)) {
                 return ResponseEntity.badRequest().body(new MessageResponse("Category not found"));
             }
 
             Video video = Video.from(videoRequest);
             video.setId(id);
+            video.setUser(username);
 
             if (videoRepository.insertOrUpdateVideo(video)) {
                 return ResponseEntity.ok(VideoResponse.from(video));
@@ -123,9 +127,11 @@ public class VideoController {
             value = "/{id}",
             produces = MediaType.APPLICATION_JSON_VALUE
     )
-    public ResponseEntity<?> deleteVideo(@PathVariable Integer id) {
-        if (videoRepository.existsById(id)) {
-            if (videoRepository.deleteVideo(id)) {
+    public ResponseEntity<?> deleteVideo(@RequestHeader("Authorization") String headerAuth, @PathVariable Integer id) {
+        String username = jwtUtils.getUserNameFromJwtToken(headerAuth.substring(7));
+
+        if (videoRepository.existsById(id, username)) {
+            if (videoRepository.deleteVideo(id, username)) {
                 return ResponseEntity.ok(new MessageResponse("Deleted video"));
             }
             return ResponseEntity.internalServerError().build();
